--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,8 +13,7 @@ verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-16.04
-  - name: centos-7
+  - name: windows2016
 
 suites:
   - name: default
