unit test build

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -21,7 +21,7 @@ platforms:
 suites:
   - name: default
     run_list:
-      - recipe[test_cookbook::default]
+      - recipe[test_cookbook]
     verifier:
       inspec_tests:
         - test/integration/default
